# REST

./: .gitignore  AnimalGroup.cpp  AnimalGroup.h  CMakeLists.txt  DATABASE.md  INSTALL.md  README.md  REQUIRED.md  main.cpp
include/: Animal.h  AnimalGroup.h  Database.h  Encryption.h  Farm.h  Inventory.h  Item.h  Medicament.h  Order.h  Reminder.h  Routes.h  Task.h  TaskClass.h
include/middleware/: JWTMiddleware.h
routes/: authRoutes.cpp  farmRoutes.cpp  workerRoutes.cpp
sql/: cropiq_dev.sql
src/: Animal.cpp  AnimalGroup.cpp  Database.cpp  Encryption.cpp  Farm.cpp  Inventory.cpp  Item.cpp  Medicament.cpp  Order.cpp  Reminder.cpp  Task.cpp  TaskClass.cpp
src/middleware/: JWTMiddleware.cpp
